--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <main class="container__principal">
         <section class="container__secundario">
             <h1 class="titulo__principal">Eleve seu negócio digital a outro nível <strong class="titulo__destaque">um Front-end de qualidade!</strong></h1>
-            <p class="subtitulo__principal">Olá! Sou Mateus Rangel, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="subtitulo__principal">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="botao">
                 <h2 class="subtitulo__secundario">Acesse minhas redes:</h2>
-                <a class="botao__style" href="https://www.linkedin.com/in/mateus-ramos-rangel/">
+                <a class="botao__style" href="https://www.linkedin.com">
                     <img src="img/linkedin.png" alt="logo do linkedin">
                     Linkedin
                 </a>
-                <a class="botao__style" href="https://github.com/MrR4ngel">
+                <a class="botao__style" href="https://github.com">
                     <img src="img/github.png" alt="logo do github">
                     Github
                 </a>
@@ -34,7 +34,7 @@
                 </a>
             </div>
         </section>
-            <img src="/img/Imagem.png" alt="Foto da Joana Santos">
+            <img class="container__imagem" src="/img/Imagem.png" alt="Foto da Joana Santos">
         
     </main>
     <footer class="footer">
